docs: change colors for dark mode
Signed-off-by: Zuhair AlSader <zuhair@koor.tech>

--- a/Documentation/stylesheets/extra.css
+++ b/Documentation/stylesheets/extra.css
@@ -10,3 +10,7 @@
 [data-md-color-primary="koor"] {
   --md-primary-fg-color: #19dda5;
 }
+
+[data-md-color-primary="koor-dark"] {
+  --md-primary-fg-color: #119671;
+}
